# tartiflette-plugin-isodate

./: .gitignore  .isort.cfg  .travis.yml  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.py
tartiflette_plugin_isodate/: __init__.py
tests/functional/: test_isodate_local.py  test_isodate_utc.py
tests/unit/: test_isodate.py
